--- a/package.json
+++ b/package.json
@@ -39,17 +39,17 @@
     "@zeit/next-source-maps": "0.0.3",
     "chalk": "^4.1.0",
     "deepmerge": "^4.2.2",
-    "dompurify": "^2.2.0",
+    "dompurify": "^3.0.8",
     "downloadjs": "^1.4.7",
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
     "js-cookie": "^2.2.1",
     "jsdom": "^16.2.2",
     "lodash": "^4.17.20",
-    "moment": "^2.24.0",
+    "moment": "^2.30.1",
     "next": "^10.0.8",
     "next-transpile-modules": "^10.0.1",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.13",
     "opds-feed-parser": "0.0.18",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -66,7 +66,7 @@
   },
   "devDependencies": {
     "@axe-core/react": "^4.1.0",
-    "@babel/core": "^7.12.7",
+    "@babel/core": "^8.0.0-alpha.6",
     "@next/bundle-analyzer": "^9.5.3",
     "@storybook/addon-actions": "^6.1.2",
     "@storybook/addon-essentials": "^6.1.2",
@@ -78,7 +78,7 @@
     "@testing-library/react": "^11.0.2",
     "@testing-library/react-hooks": "^3.2.1",
     "@testing-library/user-event": "^12.1.4",
-    "@types/dompurify": "^2.0.4",
+    "@types/dompurify": "^3.0.5",
     "@types/downloadjs": "^1.4.2",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
