--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "react-hook-form": "^7.53.1",
     "react-intersection-observer": "^9.13.1",
     "react-redux": "^7.1.0",
-    "request": "^2.88.2",
     "styled-system": "^5.1.2",
     "swr": "^1.3.0",
     "theme-ui": "^0.16.2",
@@ -65,6 +64,7 @@
   "devDependencies": {
     "@axe-core/react": "^4.1.0",
     "@babel/core": "^7.26.0",
+    "@fetch-mock/jest": "^0.2.6",
     "@next/bundle-analyzer": "^14.1.3",
     "@next/eslint-plugin-next": "^14.1.3",
     "@storybook/addon-actions": "^8.4.0",
@@ -99,8 +99,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "fetch-mock": "^9.4.0",
-    "fetch-mock-jest": "^1.2.4",
+    "fetch-mock": "^10.1.1",
     "jest": "^29.7.0",
     "jest-emotion": "^10.0.32",
     "jest-environment-jsdom": "^29.7.0",
