--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "next": "^15.0.3",
     "next-transpile-modules": "^10.0.1",
     "node-fetch": "^2.6.13",
-    "opds-feed-parser": "0.0.18",
+    "opds-feed-parser": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.1",
